other-vpol/check-serviceaccount-secrets/.kyverno-test/empty-svc-account.yaml
apiVersion: v1
kind: ServiceAccount
metadata:
  name: empty-svc-account
  namespace: default
secrets: []
