other-vpol/check-serviceaccount-secrets/.kyverno-test/exception-svc-account.yaml
apiVersion: v1
kind: ServiceAccount
metadata:
  name: other-bad-svc
  namespace: default
secrets:
  - name: build-robot-secret
