other-vpol/check-serviceaccount-secrets/.kyverno-test/kyverno-test.yaml
apiVersion: cli.kyverno.io/v1alpha1
kind: Test
metadata:
  name: svc-name
policies:
- ../check-serviceaccount-secrets.yaml
resources:
- resource.yaml
- empty-svc-account.yaml
results:
- isValidatingPolicy: true
  kind: ServiceAccount
  policy: check-serviceaccount-secrets
  resources:
  - bad-svc-account
  result: fail
- isValidatingPolicy: true
  kind: ServiceAccount
  policy: check-serviceaccount-secrets
  resources:
  - good-svc-account
  result: pass
- isValidatingPolicy: true
  kind: ServiceAccount
  policy: check-serviceaccount-secrets
  resources:
  - empty-svc-account
  result: pass
